# cpython-ext-ctrl-c

./: .gitignore  CheckSignalsOftenEnough.c  LICENSE.md  README.md  pyproject.toml  setup.py
CheckSignalsOftenEnough.fuzz/: Cargo.toml  README.md  build.rs
CheckSignalsOftenEnough.fuzz/src/: lib.rs  tdal.c
CheckSignalsOftenEnough.proof/: Proof.lean  README.md  lakefile.toml
ctrlc/: benchmark.py  interruptible.c  kissfft_subset.c  kissfft_subset.h  signaler.c
ctrlc/tests/: test_signaler.py
examples/: signaler_usage.py
measurements/: latency.kiss-fft.all-variants.csv  latency.kiss-fft.var-interval.csv  latency.np-fft.5ms.1677216samples.csv  runtime.kiss-fft.all-variants.csv  runtime.kiss-fft.csv  runtime.np-fft.csv
pycon-2025/: index.html  intro-v2.odp  latency-by-delay-py312.csv  latency-py312.csv  plots.R  plots2-scraps.R  plots2.R  runtime-gil-py312.csv  runtime-intervals-py312.csv  slides.html  talk-outline.md
pycon-2025/data/: plots2.R  runtime-all-py312.csv
pycon-2025/drafts/: proposal.md  scraps.md  talk.odp
pycon-2025/rjs/: init.js  plugin-notes.js  reveal.js  speaker-view.css  speaker-view.html  speaker-view.js  theme-mc-sol-dark.css
pycon-2025/rjs/fonts/: LICENSE-OFL.txt  fontfaces.css
